# payment_engine

./: Cargo.toml  README.md
src/: account.rs  macros.rs  main.rs
src/transaction/: engine.rs  mod.rs
tests/: a1.csv  a2.csv  a3.csv  a4.csv  b.csv  c.csv  d.csv  e.csv  error_bad_table.csv  error_many.csv  error_negative_withdrawal.csv  error_some.csv  g.csv
