[package]
name = "payment_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0.143", features = ["derive"] }

# Compiling with --no-default-features omits all error messages
# This can make the program run faster for large files
[features]
default = ["printerrors"]
printerrors = []
